--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <title>Projects</title>
 </head>
 <body>
+  <a href="https://github.com/hiccfpeltbr/Learning-Stuff/blob/main/fashionBlog.html" target="_blank">Fashion Blog</a>
 </body>
 </html>
