--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <title>Projects</title>
 </head>
 <body>
-  <a href="https://github.com/hiccfpeltbr/Learning-Stuff/blob/main/fashionBlog.html" target="_blank">Fashion Blog</a>
+  <h1>Projects</h1>
+  <ul>
+    <li>
+  <a href="https://hiccfpeltbr.github.io/Learning-Stuff/fashionBlog" target="_blank">Fashion Blog</a>
+    </li>
+  </ul>
 </body>
 </html>
