--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <li>
   <a href="https://hiccfpeltbr.github.io/Learning-Stuff/fashionBlog" target="_blank">Fashion Blog</a>
     </li>
+    <li>
+  <a href="https://hiccfpeltbr.github.io/Learning-Stuff/wineFestSchedule" target="_blank">Fashion Blog</a>
+    </li>
   </ul>
 </body>
 </html>
