--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <a href="https://hiccfpeltbr.github.io/Learning-Stuff/fashionBlog" target="_blank">Fashion Blog</a>
     </li>
     <li>
-  <a href="https://hiccfpeltbr.github.io/Learning-Stuff/wineFestSchedule" target="_blank">Fashion Blog</a>
+  <a href="https://hiccfpeltbr.github.io/Learning-Stuff/wineFestSchedule" target="_blank">Wine Festival Schedule</a>
     </li>
   </ul>
 </body>
