--- a/wineFestSchedule.html
+++ b/wineFestSchedule.html
@@ -6,7 +6,7 @@
   <title>Aguillar Family Wine Festival</title>
   <link rel="stylesheet" type="text/css" href="reset.css" />
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="wineSchedstyle.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" href="wineSchedstyle.css">
 </head>
 
 <body>
