--- a/wineFestSchedule.html
+++ b/wineFestSchedule.html
@@ -6,7 +6,7 @@
   <title>Aguillar Family Wine Festival</title>
   <link rel="stylesheet" type="text/css" href="reset.css" />
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <link rel="stylesheet" href="https://github.com/hiccfpeltbr/Learning-Stuff/blob/main/wineSchedstyle.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/hiccfpeltbr/Learning-Stuff/main/wineSchedstyle.css">
 </head>
 
 <body>
