--- a/wineFestSchedule.html
+++ b/wineFestSchedule.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Aguillar Family Wine Festival</title>
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/hiccfpeltbr/Learning-Stuff/main/wineSchedstyle.css">
+  <link rel="stylesheet" href=""/mile-stone-one/css/wineSchedstyle.css">
 </head>
 
 <body>
