--- a/wineFestSchedule.html
+++ b/wineFestSchedule.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Aguillar Family Wine Festival</title>
-  <link rel="stylesheet" href="https://hiccfpeltbr.github.io/Learning-Stuff/css/wineSchedstyle.css">
+  <link rel="stylesheet" type=“text/css” href=css/wineSchedstyle.css">
 </head>
 
 <body>
