--- a/wineFestSchedule.html
+++ b/wineFestSchedule.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Aguillar Family Wine Festival</title>
-  <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
-  <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
-  <link rel="stylesheet" type=“text/css” href="winestyle.css">
+  <link rel="stylesheet" type="test/css" href="winestyle.css">
 </head>
 
 <body>
