--- a/wineFestSchedule.html
+++ b/wineFestSchedule.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Aguillar Family Wine Festival</title>
-  <link rel="stylesheet" type="test/css" href="winestyle.css">
+  <link rel="stylesheet" type="test/css" href="main\winestyle.css">
 </head>
 
 <body>
