--- a/wineFestSchedule.html
+++ b/wineFestSchedule.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Aguillar Family Wine Festival</title>
-  <link href="main\winestyle.css" rel="stylesheet" type="test/css">
+  <link href="main/winestyle.css" rel="stylesheet" type="test/css">
 </head>
 
 <body>
