--- a/wineschedule.html
+++ b/wineschedule.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link   rel="stylesheet" href="winestyle.css"  type="text/css" >
   <title>Aguillar Family Wine Festival</title>
-  <link href="winestyle.css" rel="stylesheet">
+  
 </head>
 
 <body>
